prepare to migrate
git-svn-id: https://vavi-awt.googlecode.com/svn/trunk@11 599c6230-b40b-11de-a8e9-03fe98c3e7a5